Updated banner image link in CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -378,7 +378,7 @@ position: relative;
 background-position: center;
 height: 250px;
 width: 100%;
-background-image: url("../images/Banner\ two.png");
+background-image: url("../images/Banner\ two.jpg");
 background-size: cover;
 display: flex;
 align-items: center;
