--- a/styles/style.css
+++ b/styles/style.css
@@ -585,20 +585,18 @@ margin-top: 90px;
 
 .slider-overlay-heading {
   position: absolute;
-  top: 20px; /* distance from the top */
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.445);
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.253);
   color: #fff;
-  padding: 10px 20px;
-  border-radius: 6px;
-  font-size: 18px;
+  padding: 3px 10px;
+  font-size: 16px;
   font-weight: bold;
   text-align: center;
   z-index: 5;
-  max-width: 90%;
-  white-space: nowrap;
 }
+
 
 
 
