--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,16 @@ header h1 {
     margin-left: 80px ;
    
 }
+.header-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+  
+}
+
+
 
 
 
@@ -132,7 +142,10 @@ header h1 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    white-space:nowrap;
 }
+
+
 
 /* Gallery grid layout */
 .gallery-container {
