--- a/styles/style.css
+++ b/styles/style.css
@@ -227,17 +227,18 @@ header h1 {
     display: flex;
     flex-wrap: wrap;
     gap: 3px;
-    justify-content: left;
+    justify-content: center;
     padding: 7px;
     margin-top: 1px;
   }
   
   .thumbnail img {
-    width: 200px;
+    width: 190px;
     height: auto;
     cursor: pointer;
     border-radius: 5px;
     transition: transform 0.3s ease;
+    
   }
   
   .thumbnail img:hover {
