--- a/styles/style.css
+++ b/styles/style.css
@@ -49,12 +49,14 @@ body, html {
     justify-content: center; /* Center horizontally */
     margin-top: -50px; /* Add space above */
     margin-bottom: -110px; /* Space between logo and form */
+ 
 }
 
 .logo {
     height: 300px;
     margin-bottom: 5px;
     flex-shrink: 0;
+    padding: 12px;
 }
 
 
@@ -300,114 +302,80 @@ header h1 {
 
 /*main page*/
 
-
-header {
-display: flex;
-justify-content: space-between;
-background-color:  #2d0202;
-color: white;
-container: 100%;
-height: 90px;
-align-items: center;
-padding: 15px;
-
-
+.header {
+  background-color: #2d0202;
+  text-align: left;
+  padding: 10px;
+  font-size: 20px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  height: 90px;
+  
+  
+  
+ 
+  
+  
+  
+  
 }
-
-.head-title {
-display: flex;
-position: relative;
-margin: 0;
-justify-content: space-between;
-padding: 5px;
-
-color: white;
-margin-left: -60px;
-
-
-
-
-}
-
-
-a { text-decoration: none;}
-
-
-.main-logo {
-    width: 200px; 
-    height: auto;
-    cursor: pointer;
-   margin-left: -79px;
-    
-}
-
 
 .header-logo {
-    width: 200px; 
-    height: auto;
-    cursor: pointer;
-   margin-left: -65px;
-    
-    
-    
-    
+  width: 200px;
+  display: flex;
+  margin-left: -60px;
+ }
+
+.head-title {
+  display: inline;
+  
+  color: #ffffff;
+ 
 }
 
-
-    
-.menu {
-position: relative;
-display: inline-block;
-display: flex;
-
+.burger-nav {
+  position: relative;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
 }
 
-.menu-toggle {
-background: none;
-border: none;
-font-size: 30px;
-cursor: pointer;
-color: #ffffff;
-position: relative;
-z-index: 1001; 
-margin-right: 20px;
-padding: 5px;
-
-
+.burger-toggle {
+  font-size: 28px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 8px;
 }
 
-.menu-content {
-display: none;
-position: absolute;
-background: white;
-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-border-radius: 5px;
-padding: 10px;
-right:25px;
-margin-top: 42px;
-transition: all 0.1s;
-z-index: 1000; /* Ensure it's above other elements */
-
+.burger-menu {
+  display: none;
+  position: absolute;
+  top: 100%; /* directly below the toggle */
+  right: 0;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  flex-direction: column;
+  min-width: 160px;
+  z-index: 10;
 }
 
-.menu-content a {
-display: block;
-padding: 10px;
-text-decoration: none;
-color: black;
+.burger-menu a {
+  padding: 10px 15px;
+  text-decoration: none;
+  color: black;
+  display: block;
 }
 
-.menu-active {
-display: block;
+.burger-menu a:hover {
+  background-color: #f2f2f2;
 }
 
-.menu-content a:hover {
-background-color: #ddd;
-}
-
-.menu:hover .menu-content {
-display: block;
-}
+  
+  
 
 
 .banner {
@@ -415,11 +383,12 @@ position: relative;
 background-position: center;
 height: 250px;
 width: 100%;
-background-image: url("../images/Banner\ two.jpg");
+background-image:url("../images/Banner\ two.jpg");
 background-size: cover;
 display: flex;
 align-items: center;
 justify-content: center;
+
 
 z-index: 1;
 }
@@ -728,13 +697,14 @@ font-style: italic;
 
 .site-footer {
   width:100vw;
+  max-width: 100%;
   background-color:#2d0202;
   color: #fff;
-  padding: 10px 5px;
+  padding: 5px;
   text-align: center;
   font-size: 14px;
   margin-top: 40px;
-  margin-left: -50px;
+  
 }
 
 .site-footer p {
