--- a/styles/style.css
+++ b/styles/style.css
@@ -137,22 +137,20 @@ header h1 {
   padding: 0;
   margin: 0;
   text-align: center;
+  
 }
 
 .back-to-gallery-button {
   display: block;
   width: 100%;
- 
+  text-decoration: none;
   padding:3px;
   font-size: 16px;
   background-color: #ff6600;
   color: white;
   border: none;
- 
   font-weight: bold;
   cursor: pointer;
-  
-
   margin-top: 3px;
 
   
@@ -311,6 +309,7 @@ header h1 {
   display: flex;
   align-items: center;
   height: 90px;
+  justify-content: space-between;
   
   
   
@@ -328,9 +327,17 @@ header h1 {
  }
 
 .head-title {
-  display: inline;
-  
+  display: flex;
+  white-space: nowrap;
   color: #ffffff;
+  text-align: center;
+  font-size: 50px;
+  margin-top: 50px;
+  font-weight: bold;
+  margin-left:-60px;
+
+
+  
  
 }
 
@@ -694,6 +701,7 @@ margin: auto;
 padding-top: 30px;
 font-style: italic;
 }
+
 
 .site-footer {
   width:100vw;
