--- a/styles/style.css
+++ b/styles/style.css
@@ -335,11 +335,27 @@ header h1 {
   margin-top: 50px;
   font-weight: bold;
   margin-left:-60px;
+  white-space: nowrap;
 
 
   
  
 }
+
+@media (max-width: 600px) {
+  .head-title {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 100px) {
+  .header-logo {
+    
+  }
+}
+
+
+
 
 .burger-nav {
   position: relative;
