--- a/styles/style.css
+++ b/styles/style.css
@@ -511,6 +511,7 @@ margin-top: -40px;
 
 
 
+
 .container {
 padding: 35px;
 
@@ -848,43 +849,26 @@ font-style: italic;
 
 
 .site-footer {
-  width:100vw;
-  max-width: 100%;
-  background-color:#2d0202;
-  color: #fff;
-  padding: 2px;
+  width: 100%;
+  background-color: #2d0202;
+  color: white;
+  padding: 15px 20px;
   text-align: center;
-  font-size: 12px;
   margin-top: 40px;
-  
- 
-
-  
 }
 
-.site-footer p {
-  margin: 2px;
-  
+.contact-us-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-.site-footer a {
-  color: #ffffff;
+.contact-info a {
+  color: white;
   text-decoration: none;
-  font-weight: bold;
 }
 
-.site-footer a:hover {
+.contact-info a:hover {
   text-decoration: underline;
 }
-
-
-@media (max-width: 600px) {
-  .site-footer {
-    font-size: 13px;
-    padding: 15px 5px;
-  }
-}
-
-
-
-
