--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body, html {
 
-    font-family:Arial, Helvetica, sans-serif;
+
+    font-family: roboto, sans-serif;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -10,8 +11,12 @@ body, html {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
-    
 }
+
+
+
+   
+       
 
 
  /*contact page*/
@@ -180,8 +185,8 @@ header h1 {
 /* Gallery grid layout */
 .gallery-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 3 columns per row */
-    gap: 15px;
+    grid-template-columns: repeat(3, 1fr); /* 3 columns per row */
+    gap: 12px;
     padding: 20px;
     max-width: 1200px;
     margin: auto;
@@ -200,7 +205,7 @@ header h1 {
 
 .gallery-box img {
     width: 100%;
-    height: 100px; 
+    height: 150px; 
     object-fit:cover;
     display: block;
     transition: transform 0.3s ease;
@@ -220,7 +225,7 @@ header h1 {
     color: white;
     padding: 3px; 
     border-radius: 5px; 
-    font-size: 14px;
+    font-size: 10px;
     width: 100%;
     white-space: nowrap; /* Prevents text from breaking into multiple lines */
     text-align: center;}
@@ -261,7 +266,7 @@ header h1 {
 
 .lightbox-prev:hover,
 .lightbox-next:hover {
-  color: #ff6600;
+  color: #2d0202;
 }
 
 .gallery {
@@ -273,7 +278,7 @@ header h1 {
 
 .gallery img {
   width: 120px;
-  height: 200px;
+  height: 160px;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
@@ -297,8 +302,8 @@ header h1 {
 }
 
 .lightbox-content {
- height: 600px;
- width:400px;
+ height: 500px;
+ width:450px;
   
   border-radius: 6px;
   box-shadow: 0 0 20px black;
@@ -328,7 +333,7 @@ header h1 {
 
 .lightbox-prev:hover,
 .lightbox-next:hover {
-  color: #ff6600;
+  color:#2d0202;
 }
 
 .lightbox-prev { left: 20px; }
