--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,125 @@ body, html {
 }
 
 
+/*services*/
 
-   
+.services-main {
+  padding: 40px 20px;
+  padding-bottom: 10px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+  
+}
+
+.services-heading {
+  margin-bottom: 18px;
+}
+
+.services-intro {
+  margin-bottom: 40px;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 20px;
+}
+
+.service-box {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #2d0202;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  transition: transform 0.2s ease;
+
+}
+
+.service-box:hover {
+  transform: translateY(-5px);
+  background-color: #ff6600;
+  color: white;
+}
+
+.service-page {
+  margin-top: 30px;
+
+}
+
+.service-hero {
+  text-align: center;
+  
+}
+
+.service-content { 
+  text-align: center;
+  margin-bottom:40px;
+}
+
+.included-services {
+  margin-top: 20px;
+}
+
+.service-locations {
+  margin-top: 20px;
+}
+
+
+.service-icon {
+ width;30px;
+ height;30px;
+}
+
+
+
+
+.service-banner {
+  position: relative;
+  width: 100%;
+  height: 400px; /* Adjust height as needed */
+  background: url(../images/roof-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+}
+
+.service-banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay with 50% opacity */
+}
+
+.banner-content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: white;
+  text-align: center;
+  padding: 0 20px;
+  
+}
+
+.banner-content h2 {
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+.banner-content p {
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+
+
        
 
 
@@ -278,7 +395,7 @@ header h1 {
 
 .gallery img {
   width: 120px;
-  height: 160px;
+  height: 120px;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
@@ -303,7 +420,7 @@ header h1 {
 
 .lightbox-content {
  height: 500px;
- width:450px;
+ width:550px;
   
   border-radius: 6px;
   box-shadow: 0 0 20px black;
