--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body, html {
 }
 
 
+
 /*services*/
 
 .services-main {
@@ -31,6 +32,7 @@ body, html {
 
 .services-intro {
   margin-bottom: 40px;
+  margin-top: -25px;
 }
 
 .services-grid {
@@ -58,6 +60,8 @@ body, html {
 
 .service-page {
   margin-top: 30px;
+  margin-left: 40px;
+  margin-right: 40px;
 
 }
 
@@ -79,19 +83,147 @@ body, html {
   margin-top: 20px;
 }
 
+.service-box {
+  text-align: center;
+  padding: 20px;
+  background: #f8f8f8;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  text-decoration: none;
+  color: inherit;
+}
 
+.service-box:hover {
+  transform: translateY(-5px);
+  background:#ff6600c8;
+}
 
-
+.service-icon {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
+}
 
 
 .service-banner {
   position: relative;
   width: 100%;
-  height: 400px; /* Adjust height as needed */
+  height: 300px; /* Adjust height as needed */
   background: url(../images/roof-banner.png);
   background-size: cover;
   margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+ 
 }
+
+.service-banner-bathrooms {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/bathroom-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-kitchens {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/kitchen-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-brickwork {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/brickwork-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-blockpaving{
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/blockpaving-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-landscaping{
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/landscaping-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-decorating {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/decorating-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-extension {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/extension-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-banner-services {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust height as needed */
+  background: url(../images/services-banner.png);
+  background-size: cover;
+  margin-top: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.banner-overlay-services {
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5); /* Optional: Semi-transparent background */
+  padding:10px;
+  border-radius: 10px;
+  max-height: 243px;
+  max-width: 100%;
+  }
+
+@media (max-width: 600px) {
+  .banner {
+    height: 180px; /* Shrinks the banner for phones */
+  }
+}
+
+
 
 .service-banner::before {
   content: "";
@@ -111,7 +243,7 @@ body, html {
   justify-content: center;
   align-items: center;
   height: 100%;
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 0 20px;
   
