--- a/styles/style.css
+++ b/styles/style.css
@@ -422,6 +422,7 @@ header h1 {
   cursor: pointer;
   margin-top: 3px;
   margin-bottom: 3px;
+ 
   
  
 
@@ -450,9 +451,11 @@ header h1 {
     padding: 20px;
     max-width: 1200px;
     margin: auto;
+    align-items: flex-start;
     
    
 }
+
 
 
 .gallery-box {
@@ -474,16 +477,20 @@ header h1 {
  
 }
 
-@media (max-width:600px){
+@media (max-width:1100px){
   .gallery-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr); /* 3 columns per row */
     gap: 12px;
     padding: 20px;
     max-width: 1200px;
-    margin: auto;
+   
+    
    
 }
+
+
+
 
 
 .gallery-box {
@@ -497,7 +504,7 @@ header h1 {
 
 .gallery-box img {
     width: 100vw;
-    height: 160px; 
+    height: 260px; 
     object-fit:cover;
     display: block;
     transition: transform 0.3s ease;
@@ -505,6 +512,12 @@ header h1 {
 }
   
 }
+
+
+ 
+
+
+
 
 
 .gallery-box:hover img {
@@ -561,6 +574,7 @@ header h1 {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+
   justify-content: center;
 
   
@@ -571,9 +585,17 @@ header h1 {
   height: 120px;
   object-fit: cover;
   border-radius: 5px;
+
   cursor: pointer;
+  
+
+ 
+
   transition: transform 0.3s ease;
 }
+
+
+
 
 .gallery img:hover {
   transform: scale(1.03);
@@ -663,6 +685,7 @@ header h1 {
   align-items: center;
   height: 90px;
   justify-content: space-between;
+  margin-bottom: 3px;
   
   
   
@@ -722,13 +745,13 @@ header h1 {
 
 @media (max-width: 600px) {
   .head-title {
-    font-size: 23px;
+    font-size: 16px;
   }
 }
 
 @media (max-width:600px) {
   .head-title-main {
-    font-size: 38px;
+    font-size: 30px;
   }
 }
  
@@ -1214,3 +1237,5 @@ font-style: italic;
 .contact-info a:hover {
   text-decoration: underline;
 }
+
+
