alert message sent added

--- a/styles/style.css
+++ b/styles/style.css
@@ -972,6 +972,7 @@ padding: 0;
     height: 400px;
     margin: 0 auto;
     overflow: hidden;
+    cursor: pointer;
   }
   
   .lightbox-gallery {
