--- a/styles/style.css
+++ b/styles/style.css
@@ -889,6 +889,11 @@ header h1 {
   text-decoration: none; /* or leave none if you prefer */
 }
 
+@media only screen and (max-width: 768px) {
+  .burger-menu {
+    width: 45%;
+  }
+}
 
 
 
