--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ body, html {
   transition: transform 0.3s ease;
   text-decoration: none;
   color: inherit;
+  margin: 10px;
 }
 
 .service-box:hover {
