--- a/styles/style.css
+++ b/styles/style.css
@@ -38,19 +38,20 @@ body, html {
 .services-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 20px;
+  gap: 10px;
+ 
 }
 
 
   @media (max-width:1050px)  {
     .services-grid{
       display: flex;
-  flex-wrap: wrap;
-  justify-content: center; 
-  gap: 10px; 
-  max-width: 900px; 
-  margin: 0 auto; 
-  grid-template-columns: repeat(1, 1fr); 
+      flex-wrap: wrap;
+      justify-content: center; 
+      gap: 5px; 
+      
+
+      grid-template-columns: repeat(1, 1fr); 
     }
   }
   
@@ -64,6 +65,7 @@ body, html {
   color: #2d0202;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   transition: transform 0.2s ease;
+ 
 
 }
 
@@ -97,6 +99,7 @@ body, html {
 .service-content { 
   text-align: center;
   margin-bottom:40px;
+ 
 }
 
 .included-services {
@@ -110,12 +113,13 @@ body, html {
 .service-box {
   text-align: center;
   padding: 20px;
-  background: #f8f8f8;
+  background:  #f2f2f2;;
   border-radius: 8px;
   transition: transform 0.3s ease;
   text-decoration: none;
   color: inherit;
   margin: 10px;
+  
 }
 
 .service-box:hover {
@@ -126,7 +130,8 @@ body, html {
 .service-icon {
   width: 50px;
   height: 50px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  
 }
 
 
@@ -140,6 +145,7 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 5px;
+ 
  
 }
 
@@ -859,6 +865,7 @@ header h1 {
     margin-left: auto;
     display: flex;
     align-items: center;
+    
   }
   
   .burger-toggle {
@@ -882,7 +889,7 @@ header h1 {
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     z-index: 1000;
-  
+   
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -921,7 +928,9 @@ header h1 {
     text-decoration: none;
     color: #fff;
     font-weight: 500;
-    margin-bottom: 10px;
+    padding: 15px;
+    font-size: 18px;
+    
   }
   
   .burger-menu > a:hover,
@@ -935,13 +944,14 @@ header h1 {
   .menu-item {
     margin-bottom: 1rem;
     margin-bottom: 5px;
+    
   }
   
  
   .accordion-header {
     display: inline-flex;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
     line-height: 0.4;
   }
   
@@ -950,6 +960,7 @@ header h1 {
     color: #fff;
     text-decoration: none;
     font-weight: 500;
+   
   }
   
  
@@ -961,15 +972,18 @@ header h1 {
     margin-left: -5px;
     cursor: pointer;
     color: inherit;
-    font-size: 1em;
+    font-size: 10px;
+    
   }
   
  
   .arrow {
     display: inline-block;
     transition: transform 0.3s ease;
-    font-size: 25px;
-    line-height: 1;
+    font-size: 20px;
+    line-height:1px;
+    margin-top: 13px;
+    margin-left: -15px;
     
   }
   
@@ -986,6 +1000,7 @@ header h1 {
     max-height: 0;
     overflow: hidden;
    
+   
     transition: max-height 0.3s ease;
     
   }
@@ -999,9 +1014,12 @@ header h1 {
   .submenu-list > a {
     display: block;
     margin: 0 0 0.25rem;
-    padding: 0.25rem 0;
-    font-size: 14px;
+    padding: 5px;
+    padding-left: 10px;
+    font-size: 10px;
     line-height: 0.6;
+    
+    
   }
   
   .submenu-list a {
