--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,49 @@ body, html {
     scroll-behavior: smooth;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+/* Privacy banner styling */
+.privacy-banner-wrapper {
+  margin-top: 10px;
+  padding: 0 15px;
+
+}
+
+
+
+.privacy-banner {
+height: 500px; }
+
+@media (max-width:498px) {
+  .privacy-banner{
+   height: 150px;
+    
+  }
+}
+
+
+
+.privacy-banner {
+  width: 100%;
+  max-height:350px;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: block;
+  margin: 0 auto;
+}
+
+
 /* Carousel */
 .infinite-carousel {
   overflow: hidden;
@@ -25,10 +68,6 @@ body, html {
   display: flex;
   width: max-content;
   animation: scroll-left 150s linear infinite;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
-  touch-action: pan-y;
 }
 
 
@@ -169,6 +208,7 @@ body, html {
 .service-content { 
   text-align: center;
   margin-bottom:40px;
+  margin-top: 20px;
  
 }
 
@@ -176,8 +216,10 @@ body, html {
   margin-top: 20px;
 }
 
-.service-locations {
+.service-locations, h3 {
   margin-top: 20px;
+  
+ 
 }
 
 .service-box {
@@ -1367,6 +1409,7 @@ padding: 0;
   right: 10px;
 }
 
+
  
   
 
@@ -1544,10 +1587,13 @@ margin-bottom: 30px;
 
 .contact-us-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center;     /* Center align items */
+  gap: 10px;               /* Add space between each */
 }
+
+
+
 
 .contact-info a {
   color: white;
