--- a/styles/style.css
+++ b/styles/style.css
@@ -972,12 +972,14 @@ header h1 {
 @media (max-width: 600px) {
   .head-title {
     font-size: 16px;
+   
   }
 }
 
 @media (max-width:600px) {
   .head-title-main {
     font-size: 30px;
+   
   }
 }
  
@@ -1182,33 +1184,8 @@ header h1 {
   
 
 
-.banner {
-position: relative;
-background-position: center;
-height: 250px;
-width: 100%;
-background-image:url("../images/Banner\ two.jpg");
-border-radius: 5px;
-background-size: cover;
-display: flex;
-align-items: center;
-justify-content: center;
 
 
-z-index: 1;
-}
-
-.banner-overlay {
-display: flex;
-flex-direction: column; 
-align-items: center; 
-justify-content: center;
-background: rgba(0, 0, 0, 0.5); 
-padding:10px;
-border-radius: 10px;
-max-height: 250px;
-max-width: 400px;
-}
 
 .banner-content {
 display: flex;
@@ -1221,10 +1198,10 @@ width: 1000px;
 }
 
 .banner-logo {
-width: 500px;
-height: 500px;;
+width: 600px;
+height: 600px;;
 object-fit: contain;
-margin-top: -52px;
+margin-bottom: -50px;
 }
 
 .banner-info {
@@ -1241,7 +1218,7 @@ background-color: #ff6600;
 padding: 10px 15px;
 text-decoration: none;
 border-radius: 5px;
-margin-top: -40px;
+margin-bottom: 80px;
 
 
 
@@ -1250,6 +1227,55 @@ margin-top: -40px;
 .button:hover {
     opacity: 0.8;
 }
+
+
+.banner-slider {
+  position: relative;
+  height: 400px;
+  width: 100%;
+  overflow: hidden;
+ 
+  margin-top: -5px;
+ 
+}
+
+.banner-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+  z-index: 0;
+  
+}
+
+.banner-slide.active {
+  opacity: 1;
+  z-index: 0;
+
+}
+
+.banner-overlay {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5); 
+  padding: 10px;
+  border-radius: 5px;
+  max-height: 400px;
+  max-width: 1000px;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 
 
 
