--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ height: 500px; }
 
 @media (max-width:498px) {
   .privacy-banner{
-   height: 150px;
+   height: 270px;
     
   }
 }
@@ -47,7 +47,7 @@ height: 500px; }
 
 .privacy-banner {
   width: 100%;
-  max-height:350px;
+  max-height:470px;
   object-fit: cover;
   border-radius: 6px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -258,7 +258,7 @@ height: 500px; }
 .service-banner {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/roof-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -272,7 +272,7 @@ height: 500px; }
 .service-banner-bathrooms {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/bathroom-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -284,7 +284,7 @@ height: 500px; }
 .service-banner-kitchens {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/kitchen-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -296,7 +296,7 @@ height: 500px; }
 .service-banner-brickwork {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/brickwork-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -308,7 +308,7 @@ height: 500px; }
 .service-banner-blockpaving{
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/blockpaving-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -320,7 +320,7 @@ height: 500px; }
 .service-banner-landscaping{
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/landscaping-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -332,7 +332,7 @@ height: 500px; }
 .service-banner-decorating {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/decorating-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -344,7 +344,7 @@ height: 500px; }
 .service-banner-extension {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/extension-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -356,7 +356,7 @@ height: 500px; }
 .service-banner-services {
   position: relative;
   width: 100%;
-  height: 400px; 
+  height: 470px; 
   background: url(../images/services-banner.png);
   background-size: cover;
   margin-top: 4px;
@@ -374,14 +374,15 @@ height: 500px; }
   transform: translate(-50%, -50%);
   background-color: rgba(27, 24, 23, 0.6); 
   color: #fff;
-  padding: 15px 20px;
+  padding: 50px 150px;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
   border-radius: 5px;
   z-index: 5;
   width: 90%;
-  max-width: 800px;
+  max-width: 1200px;
+  
  
   }
 
@@ -736,6 +737,8 @@ header h1 {
     transition: transform 0.3s ease;
  
 }
+
+
   
 }
 
@@ -804,7 +807,8 @@ header h1 {
   gap: 10px;
   justify-content: center;
   align-self: flex-start; 
-  margin-top: 1em;        
+  margin-top: 1em;  
+      
 }
 
 .gallery {
@@ -843,13 +847,7 @@ header h1 {
   align-items: center;
 }
 
-.lightbox-content {
- height: auto;
- width: auto;
-  
-  border-radius: 6px;
-  box-shadow: 0 0 20px black;
-}
+
 
 .lightbox-close {
   position: absolute;
@@ -1232,7 +1230,7 @@ margin-bottom: 80px;
 
 .banner-slider {
   position: relative;
-  height: 400px;
+  height: 470px;
   width: 100%;
   overflow: hidden;
   
@@ -1272,7 +1270,7 @@ margin-bottom: 80px;
   background: rgba(0, 0, 0, 0.5); 
   padding: 10px;
   border-radius: 5px;
-  max-height: 400px;
+  max-height: 475px;
   max-width: 1000px;
   margin: auto;
   top: 50%;
@@ -1358,16 +1356,7 @@ padding: 0;
 
 
 /* Slider Container */
-.slider-container {
-    position: relative;
-    width: 100%;
-    max-width: 600px;
-    height: 400px;
-    margin: 0 auto;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  
+
   .lightbox-gallery {
     display: flex;
     flex-wrap: wrap;
@@ -1398,11 +1387,24 @@ padding: 0;
     align-items: center;
   }
   
+.lightbox-content {
+  margin:5px;
+  margin-bottom: 20px;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  width: a;
+  height: auto;
+  animation: zoom 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
   .lightbox-content {
-    max-width: 90%;
-    max-height: 90%;
-    border-radius: 6px;
+    max-width: 95%;
+    max-height: 95%;
   }
+}
+
   
   .lightbox-close {
     position: absolute;
@@ -1452,14 +1454,7 @@ padding: 0;
   
 
   
- 
-  @media (max-width: 900px) {
-    .slider-container {
-      max-width: 90%;
-      height: 300px;
-    }
-  }
-  
+
   @media (max-width: 600px) {
   
   
@@ -1653,13 +1648,7 @@ margin-bottom: 30px;
   align-items: center;
 }
 
-.lightbox-content {
-  margin: auto;
-  display: block;
-  max-width: 90%;
-  max-height: 80%;
-  animation: zoom 0.3s ease-in-out;
-}
+
 
 @keyframes zoom {
   from {
