--- a/styles/style.css
+++ b/styles/style.css
@@ -1269,9 +1269,9 @@ margin-bottom: 80px;
   justify-content: center;
   background: rgba(0, 0, 0, 0.5); 
   padding: 10px;
-  border-radius: 5px;
-  max-height: 475px;
-  max-width: 1000px;
+
+  max-height: 380px;
+  max-width: 100vw;
   margin: auto;
   top: 50%;
   transform: translateY(-50%);
