--- a/styles/style.css
+++ b/styles/style.css
@@ -1542,7 +1542,7 @@ grid-template-columns: repeat(3, 1fr);
   width: 30%;
   height: 330px;
   display: flex;
-
+  margin-bottom: 8px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
